gccida/g3/fold_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3780:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3789:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3830:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3831:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3831:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3832:4: error: expected ';' after expression
rtx v58; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3832:5: error: use of undeclared identifier 'v58'
rtx v58; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3839:4: error: expected ';' after expression
rtx v65; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3839:5: error: use of undeclared identifier 'v65'
rtx v65; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3841:6: error: use of undeclared identifier 'v67'
rtx *v67; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3869:4: error: expected ';' after expression
rtx const_rtx; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3869:5: error: use of undeclared identifier 'const_rtx'
rtx const_rtx; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3872:4: error: expected ';' after expression
rtx v98; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3872:5: error: use of undeclared identifier 'v98'
rtx v98; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3876:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v102; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3880:4: error: expected ';' after expression
rtx v106; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3880:5: error: use of undeclared identifier 'v106'
rtx v106; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3890:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v116; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/cse.c:3891:4: error: expected ';' after expression
rtx v117; // rdx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fold_rtx/src/obj/cse.o] Error 1
